<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.12</version>
        <relativePath/>
    </parent>

    <groupId>nl.rotterdam.huwelijk</groupId>
    <artifactId>huwelijk-poc-copilot</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>huwelijk-poc-copilot</name>
    <description>Huwelijk POC - Municipality of Rotterdam</description>

    <licenses>
        <license>
            <name>European Union Public Licence v. 1.2</name>
            <url>https://eupl.eu/1.2/en/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>25</java.version>
        <wicket.version>10.8.0</wicket.version>
         <rotterdam-nlds.version>0.1.0</rotterdam-nlds.version>
        <wicket-webjars.version>4.0.8</wicket-webjars.version>
        <bootstrap.version>5.3.7</bootstrap.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Force Wicket 10.8.0 for all transitive dependencies -->
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-core</artifactId>
                <version>${wicket.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-tester</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>1.28.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-request</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-util</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-extensions</artifactId>
                <version>${wicket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.wicket</groupId>
                <artifactId>wicket-spring</artifactId>
                <version>${wicket.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Spring Boot -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- PostgreSQL -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Apache Wicket -->
        <dependency>
            <groupId>org.apache.wicket</groupId>
            <artifactId>wicket-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.wicket</groupId>
            <artifactId>wicket-tester</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.wicket</groupId>
            <artifactId>wicket-spring</artifactId>
            <version>${wicket.version}</version>
        </dependency>

        <!-- NL Design System Wicket Components by Rotterdam -->
        <dependency>
            <groupId>nl.rotterdam.nl-design-system</groupId>
            <artifactId>rotterdam-nlds-wicket</artifactId>
            <version>${rotterdam-nlds.version}</version>
        </dependency>
        <!-- Rotterdam Design Tokens (rods-theme CSS custom properties) -->
        <dependency>
            <groupId>nl.rotterdam.nl-design-system</groupId>
            <artifactId>rotterdam-nlds-css-wicket</artifactId>
            <version>${rotterdam-nlds.version}</version>
        </dependency>

        <!-- Spring Security -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- Flyway database migrations -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>

        <!-- Phone number validation -->
        <dependency>
            <groupId>com.googlecode.libphonenumber</groupId>
            <artifactId>libphonenumber</artifactId>
            <version>9.0.8</version>
        </dependency>

        <!-- Email address validation -->
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>1.10.1</version>
        </dependency>

        <!-- Jsoup for web scraping (BABS import from rotterdam.nl) -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.18.3</version>
        </dependency>

        <!-- Apache POI for xlsx import -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.4.0</version>
        </dependency>

        <!-- Wicket Webjars integration -->
        <dependency>
            <groupId>de.agilecoders.wicket.webjars</groupId>
            <artifactId>wicket-webjars</artifactId>
            <version>${wicket-webjars.version}</version>
        </dependency>
        <!-- Bootstrap utilities CSS (via WebJars) -->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>${bootstrap.version}</version>
        </dependency>

        <!-- Wicket Extensions (for DataTable toolbars) -->
        <dependency>
            <groupId>org.apache.wicket</groupId>
            <artifactId>wicket-extensions</artifactId>
            <version>${wicket.version}</version>
        </dependency>

        <!-- Rotterdam NLDS Extensions (RotterdamLogoImage, icons, etc.) -->
        <dependency>
            <groupId>nl.rotterdam.nl-design-system</groupId>
            <artifactId>rotterdam-nlds-extensions-wicket</artifactId>
            <version>${rotterdam-nlds.version}</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.zonky.test</groupId>
            <artifactId>embedded-database-spring-test</artifactId>
            <version>2.8.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <!-- Include Wicket HTML markup files co-located with Java classes -->
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.html</include>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.css</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
